manifests/focalboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-deployment
  labels:
    app: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      containers:
      - name: mattermost
        image: mattermost/mattermost-team-edition
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: mattermost-data
          mountPath: /mattermost/data
      volumes:
      - name: mattermost-data
        persistentVolumeClaim:
          claimName: mattermost-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
spec:
  selector:
    app: mattermost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls.certresolver: "nidus-mcaq-tls"
spec:
  tls:
    - hosts:
        - nidus.mcaq.me
      secretName: nidus-mcaq-tls
  rules:
    - host: nidus.mcaq.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost-service
                port:
                  number: 80
